<resources>
    <string name="app_name">Heyla</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="facebook_app_id">1455778024434398</string>
    <string name="hint_email">\tE-Mail ID</string>
    <string name="hint_password">\tPassword</string>
    <string name="hint_promocode">\tPromocode (Optional)</string>
    <string name="forgot_passwords">Forgot Your Password?</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="guest_login"><u>Guest Login</u></string>
    <string name="dont_have_account">Don\'t Have an Account? Click Here</string>
    <string name="title_activity_select_fragment">SelectFragmentActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_landing">FAVORITES</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_occured">Failed to connect to the server. Please try again.</string>
    <string name="empty" />
    <string name="alert_button_ok">OK</string>
    <string name="enter_user_name">User name cannot be empty</string>
    <string name="email_empty_str">Email Id cannot be empty</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="enter_password">Password cannot be empty</string>
    <string name="min_pass_length">Short passwords are easy to guess! Try one with at least 8 characters...</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="progress_loading">Loading...</string>
    <string name="no_connectivity">Please check your internet connectivity and try again.</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="title_activity_static_event_detail">StaticEventDetailActivity</string>
    <string name="title_book_mark">Bookmarks</string>
    <string name="venue">Venue</string>
    <string name="about_event">About Event</string>
    <string name="action_set_preferences">Set Preferences</string>
    <string name="action_skip">Skip</string>
    <string name="action_edit_preferences">Edit Preferences</string>
    <string name="action_logout">Logout</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="wish_logout">Do you wish to logout?</string>
    <string name="select_preference">Select your preferences</string>
    <string name="enter_confirm_password">Confirm your password</string>
    <string name="password_not_match">Password do not match</string>
    <string name="action_directions">Get directions</string>
    <string name="title_activity_select_city">Select City</string>
    <string name="select_city">Select your city</string>
    <string name="select_country">Select your country</string>
    <string name="swipe_up_to_continue">Swipe up to continue</string>
    <string name="tab_to_continue">Tap to continue</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="facebook">Facebook</string>
    <string name="gplus">Google+</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_using">Sign up using</string>
    <string name="hint_enter_name">\tName</string>
    <string name="by_agreeing">By Signing up, I agree to Heyla\'s</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="wishlist">Wishlist</string>
    <string name="accept">Wishlist</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_addEvent">Add Events</string>
    <string name="title_activity_maps">Map</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="interested">Interested</string>
    <string name="checkin">Check-in</string>
    <string name="booking">Booking</string>
    <string name="from">From</string>
    <string name="till">Till</string>
    <string name="hyphen">-</string>
    <string name="zero">00</string>
    <string name="location">Location</string>
    <string name="expo">Expo</string>
    <string name="invite">Invite</string>
    <string name="na">N/A</string>
    <string name="bookmark">Bookmark</string>
    <string name="google_maps_key">AIzaSyA6oarI_gtl1sfcA5DG1nPhi24MCizkiyM</string>
    <string name="gps_network_not_enabled">Enable GPS</string>
    <string name="open_location_settings">Open location manager</string>
    <string name="Cancel">Cancel</string>
    <string name="share_content">Fun around you</string>
    <string name="pay_opt">Payment Option</string>
    <string name="card_type">Card Type</string>
    <string name="pay_button">Pay</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="billingAddress">Billing Address</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="tel">Telephone</string>
    <string name="email">Email Id</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="card_number">Card Number</string>
    <string name="card_cvv">Card CVV</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="card_details">Card Details</string>
    <string name="issuing_bank">Issuing Bank</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="emi_banks">EMI Banks</string>
    <string name="emi_card_name">Card Name</string>
</resources>