<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_app_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.findafun.activity.SelectCityActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:background="#ffffff"
        android:padding="80dp"
        android:src="@drawable/ac_logo_main"
        android:visibility="gone" />

    <EditText
        android:id="@+id/btn_country_drop_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_swipe_up"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_rounded_white_orange_border"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/down_arrow"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textNoSuggestions"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/select_country"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/btn_city_drop_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_swipe_up"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_white_orange_border"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/down_arrow"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textNoSuggestions"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/select_city"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/auto_select_location"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:padding="3dp"
            android:text="Auto-detect my location"
            android:textColor="@color/colorRed"
            android:textSize="20dp"
            android:textStyle="italic|bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/city_auto_location" />
    </LinearLayout>


    <TextView
        android:id="@id/txt_swipe_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:drawablePadding="20dp"
        android:drawableRight="@drawable/forward_red"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tab_to_continue"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
